<resources>
    <string name="app_name">InsuranPremiumCalculator</string>
    <string name="insuran_premium_calculator">Insuran Premium Calculator</string>
    <string name="age">Age:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender:</string>
    <string name="smoker">Smoker:</string>
    <string name="total_premium">Total Premium:</string>
    <string name="reset">RESET</string>
    <string name="calcualte">CALCUALTE</string>
    <string name="yes">Yes</string>
    <string name="_0_00">0.00</string>

    <string-array name="AgeRange">
        <item>Less than 17</item>
        <item>17 - 25</item>
        <item>26 - 30</item>
        <item>31 - 40</item>
        <item>41 - 55</item>
        <item>More than 55</item>
    </string-array>
</resources>
